--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#31e5f2"
-backgroundColor="#3d3d3d"
-secondaryBackgroundColor="#848484"
+primaryColor="#F6C700"
+backgroundColor="#0E1116"
+secondaryBackgroundColor="#F6C700"
 textColor="#FFFFFF"
 font="sans serif"
