--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#F6C700"
 backgroundColor="#0E1116"
-secondaryBackgroundColor="#F6C700"
+secondaryBackgroundColor="#26272F"
 textColor="#FFFFFF"
 font="sans serif"
