--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,6 @@
 [theme]
-primaryColor="#F6C700"
+primaryColor="#FEC601"
+#primaryColor="#F6C700"
 backgroundColor="#0E1116"
 secondaryBackgroundColor="#26272F"
 textColor="#FFFFFF"
