--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#FEC601"
+primaryColor="#F8B405"
 #primaryColor="#F6C700"
 backgroundColor="#0E1116"
 secondaryBackgroundColor="#26272F"
